--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,18 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
+            android:name=".pantallaregistro2_2"
+            android:exported="false" />
+        <activity
+            android:name=".pantallaestadistica2_2"
+            android:exported="false" />
+        <activity
+            android:name=".pantallaestadistica2_1"
+            android:exported="false" />
+        <activity
+            android:name=".pantallaregistro2_1"
+            android:exported="false" />
+        <activity
             android:name=".pantallaregistro4"
             android:exported="false" />
         <activity
@@ -101,6 +113,7 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
